<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bluegrey"
        android:orientation="vertical">

        <TextView
            android:id="@+id/itemNameTop"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/newItem"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="150dp"
        android:background="@color/light_grey"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/categoryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categoryText"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/categoryOptions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/black"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameText"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nameInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:ems="10"
                android:inputType="textPersonName"
                android:singleLine="false"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/brandText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brandText"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/brandInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_horizontal"
            android:layout_marginTop="20sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/dateText"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/monthInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:ems="3"
                    android:hint="mm"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

                <EditText
                    android:id="@+id/dayInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:ems="3"
                    android:hint="dd"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

                <EditText
                    android:id="@+id/yearInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:ems="3"
                    android:hint="yyyy"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="60dp"
            android:backgroundTint="@color/bluegrey"
            android:text="@string/saveText"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/addListButton"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:backgroundTint="@color/bluegrey"
            android:text="@string/addToListText"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:backgroundTint="@color/bluegrey"
            android:text="@string/deleteText"
            android:textColor="@color/black" />


    </LinearLayout>

</LinearLayout>